--- a/css/bs-custom.css
+++ b/css/bs-custom.css
@@ -1,20 +1,32 @@
+/* custom border classes */
 .border-custom-color {
     border-color:#9A9DA0 !important;
 }
 .border-custom-width {
     border-width: 2px !important;
 }
+
+/* change of BS class */
 .img-thumbnail {
   background-color: rgba(255, 255, 255, 0.1) !important;
   border-color: #9A9DA0 !important;
   padding: 8px;
 }
-.img-thumbnail a {
+a {
   color: #ffffff;
 }
-.img-thumbnail a:hover {
+a:hover {
   color: #b3b3b3;
 }
-.img-thumbnail a:focus {
+a:focus {
   color: #b3b3b3;
+}
+
+/* Padding and height for sticky navbar at top */
+body {
+  min-height: 75rem;
+  padding-top: 10vh;
+}
+.navbar {
+    height: 10vh;
 }
