--- a/css/footer.css
+++ b/css/footer.css
@@ -9,8 +9,8 @@
     border-radius: 50%;
     -webkit-box-shadow: 0 5px 11px 0 rgba(0,0,0,0.18),0 4px 15px 0 rgba(0,0,0,0.15);
     box-shadow: 0 5px 11px 0 rgba(0,0,0,0.18),0 4px 15px 0 rgba(0,0,0,0.15);
-    -webkit-transition: all .3s ease-in-out;
-    transition: all .3s ease-in-out;
+    -webkit-transition: all .2s ease-in-out;
+    transition: all .2s ease-in-out;
     width: 45px;
     height: 45px;
 }
@@ -28,4 +28,14 @@
 .btn-twitter {
     color: #fff;
     background-color: #55ACEE !important;
+}
+html,
+body {
+  height: 100%;
+}
+#page-content {
+  flex: 1 0 auto;
+}
+#sticky-footer {
+  flex-shrink: none;
 }
