product.html completed and corresponding CSS added to bs-costum.css

--- a/css/bs-custom.css
+++ b/css/bs-custom.css
@@ -44,3 +44,48 @@ a:hover, a:focus {
 .productVisible {
   display: block;
 }
+
+/* styling for product.html */
+
+/* Styling for modal lightbox */
+/* Close Button of modal */
+.close {
+  position: absolute;
+  top: 0;
+  right: 0;
+  margin-top: -4px;
+  color: #ffffff;
+  text-shadow: none;
+}
+/* BG of Modal */
+.modal-content {
+  background-color: #343A40;
+}
+/* color of nav icons */
+.ekko-lightbox-nav-overlay i{
+  color: #9A9DA0;
+}
+
+/* play icon centerd over image */
+.playIcon {
+  position: relative;
+  display: inline-block;
+}
+.playIcon::before {
+    content: '\f144';
+    z-index: 5;
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate( -50%, -50% );
+    padding: 3px 15px 3px 25px;
+    color: #9A9DA0;
+    font-family: 'FontAwesome';
+    font-size: 500% !important;
+    background-color: transparent;
+    border-radius: 5px 5px 5px 5px;
+}
+/* price icon bigger */
+.price i, .price {
+    font-size: x-large;
+}
